parser/GrammarParser.js
// Generated from Grammar.g4 by ANTLR 4.8
// jshint ignore: start
var antlr4 = require('antlr4/index');
var GrammarListener = require('./GrammarListener').GrammarListener;
var GrammarVisitor = require('./GrammarVisitor').GrammarVisitor;

var grammarFileName = "Grammar.g4";




var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'...'", "'.'", "'('", "','", "')'", "'void'", 
                     "'=>'", "'for'", "'while'", "';'", "'in'", "'of'", 
                     "'if'", "'elif'", "'else'", "'['", "']'", "'{'", "'}'", 
                     "':'", "'='", "'*='", "'/='", "'+='", "'-='", "'%='", 
                     "'++'", "'--'", "'stat'", "'pub'", "'var'", "'return'", 
                     "'new'", "'class'", "'to'", "'by'", "'?'", "'!='", 
                     "'=='", "'>'", "'>='", "'<'", "'<='", "'&&'", "'||'", 
                     "'!'", "'%'", "'*'", "'/'", "'+'", "'-'", "'_'", "'#'", 
                     "'true'", "'false'" ];

var symbolicNames = [ null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      "TRUE", "FALSE", "WS", "COMMENT", "WORD", "STRING", 
                      "NUM" ];

var ruleNames =  [ "iden", "parameter", "parameters", "func", "forloop", 
                   "whileloop", "iter", "cond", "tuple", "array", "dictionary", 
                   "property", "declar", "assign", "designator", "statement", 
                   "value" ];

function GrammarParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

GrammarParser.prototype = Object.create(antlr4.Parser.prototype);
GrammarParser.prototype.constructor = GrammarParser;

Object.defineProperty(GrammarParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

GrammarParser.EOF = antlr4.Token.EOF;
GrammarParser.T__0 = 1;
GrammarParser.T__1 = 2;
GrammarParser.T__2 = 3;
GrammarParser.T__3 = 4;
GrammarParser.T__4 = 5;
GrammarParser.T__5 = 6;
GrammarParser.T__6 = 7;
GrammarParser.T__7 = 8;
GrammarParser.T__8 = 9;
GrammarParser.T__9 = 10;
GrammarParser.T__10 = 11;
GrammarParser.T__11 = 12;
GrammarParser.T__12 = 13;
GrammarParser.T__13 = 14;
GrammarParser.T__14 = 15;
GrammarParser.T__15 = 16;
GrammarParser.T__16 = 17;
GrammarParser.T__17 = 18;
GrammarParser.T__18 = 19;
GrammarParser.T__19 = 20;
GrammarParser.T__20 = 21;
GrammarParser.T__21 = 22;
GrammarParser.T__22 = 23;
GrammarParser.T__23 = 24;
GrammarParser.T__24 = 25;
GrammarParser.T__25 = 26;
GrammarParser.T__26 = 27;
GrammarParser.T__27 = 28;
GrammarParser.T__28 = 29;
GrammarParser.T__29 = 30;
GrammarParser.T__30 = 31;
GrammarParser.T__31 = 32;
GrammarParser.T__32 = 33;
GrammarParser.T__33 = 34;
GrammarParser.T__34 = 35;
GrammarParser.T__35 = 36;
GrammarParser.T__36 = 37;
GrammarParser.T__37 = 38;
GrammarParser.T__38 = 39;
GrammarParser.T__39 = 40;
GrammarParser.T__40 = 41;
GrammarParser.T__41 = 42;
GrammarParser.T__42 = 43;
GrammarParser.T__43 = 44;
GrammarParser.T__44 = 45;
GrammarParser.T__45 = 46;
GrammarParser.T__46 = 47;
GrammarParser.T__47 = 48;
GrammarParser.T__48 = 49;
GrammarParser.T__49 = 50;
GrammarParser.T__50 = 51;
GrammarParser.T__51 = 52;
GrammarParser.T__52 = 53;
GrammarParser.TRUE = 54;
GrammarParser.FALSE = 55;
GrammarParser.WS = 56;
GrammarParser.COMMENT = 57;
GrammarParser.WORD = 58;
GrammarParser.STRING = 59;
GrammarParser.NUM = 60;

GrammarParser.RULE_iden = 0;
GrammarParser.RULE_parameter = 1;
GrammarParser.RULE_parameters = 2;
GrammarParser.RULE_func = 3;
GrammarParser.RULE_forloop = 4;
GrammarParser.RULE_whileloop = 5;
GrammarParser.RULE_iter = 6;
GrammarParser.RULE_cond = 7;
GrammarParser.RULE_tuple = 8;
GrammarParser.RULE_array = 9;
GrammarParser.RULE_dictionary = 10;
GrammarParser.RULE_property = 11;
GrammarParser.RULE_declar = 12;
GrammarParser.RULE_assign = 13;
GrammarParser.RULE_designator = 14;
GrammarParser.RULE_statement = 15;
GrammarParser.RULE_value = 16;


function IdenContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = GrammarParser.RULE_iden;
    return this;
}

IdenContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
IdenContext.prototype.constructor = IdenContext;

IdenContext.prototype.WORD = function() {
    return this.getToken(GrammarParser.WORD, 0);
};

IdenContext.prototype.enterRule = function(listener) {
    if(listener instanceof GrammarListener ) {
        listener.enterIden(this);
	}
};

IdenContext.prototype.exitRule = function(listener) {
    if(listener instanceof GrammarListener ) {
        listener.exitIden(this);
	}
};

IdenContext.prototype.accept = function(visitor) {
    if ( visitor instanceof GrammarVisitor ) {
        return visitor.visitIden(this);
    } else {
        return visitor.visitChildren(this);
    }
};




GrammarParser.IdenContext = IdenContext;

GrammarParser.prototype.iden = function() {

    var localctx = new IdenContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, GrammarParser.RULE_iden);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 34;
        this.match(GrammarParser.WORD);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ParameterContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = GrammarParser.RULE_parameter;
    return this;
}

ParameterContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ParameterContext.prototype.constructor = ParameterContext;


 
ParameterContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};


function PropertyParameterContext(parser, ctx) {
	ParameterContext.call(this, parser);
    ParameterContext.prototype.copyFrom.call(this, ctx);
    return this;
}

PropertyParameterContext.prototype = Object.create(ParameterContext.prototype);
PropertyParameterContext.prototype.constructor = PropertyParameterContext;

GrammarParser.PropertyParameterContext = PropertyParameterContext;

PropertyParameterContext.prototype.iden = function() {
    return this.getTypedRuleContext(IdenContext,0);
};
PropertyParameterContext.prototype.enterRule = function(listener) {
    if(listener instanceof GrammarListener ) {
        listener.enterPropertyParameter(this);
	}
};

PropertyParameterContext.prototype.exitRule = function(listener) {
    if(listener instanceof GrammarListener ) {
        listener.exitPropertyParameter(this);
	}
};

PropertyParameterContext.prototype.accept = function(visitor) {
    if ( visitor instanceof GrammarVisitor ) {
        return visitor.visitPropertyParameter(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function SpreadParameterContext(parser, ctx) {
	ParameterContext.call(this, parser);
    ParameterContext.prototype.copyFrom.call(this, ctx);
    return this;
}

SpreadParameterContext.prototype = Object.create(ParameterContext.prototype);
SpreadParameterContext.prototype.constructor = SpreadParameterContext;

GrammarParser.SpreadParameterContext = SpreadParameterContext;

SpreadParameterContext.prototype.iden = function() {
    return this.getTypedRuleContext(IdenContext,0);
};
SpreadParameterContext.prototype.enterRule = function(listener) {
    if(listener instanceof GrammarListener ) {
        listener.enterSpreadParameter(this);
	}
};

SpreadParameterContext.prototype.exitRule = function(listener) {
    if(listener instanceof GrammarListener ) {
        listener.exitSpreadParameter(this);
	}
};

SpreadParameterContext.prototype.accept = function(visitor) {
    if ( visitor instanceof GrammarVisitor ) {
        return visitor.visitSpreadParameter(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function IdenParameterContext(parser, ctx) {
	ParameterContext.call(this, parser);
    ParameterContext.prototype.copyFrom.call(this, ctx);
    return this;
}

IdenParameterContext.prototype = Object.create(ParameterContext.prototype);
IdenParameterContext.prototype.constructor = IdenParameterContext;

GrammarParser.IdenParameterContext = IdenParameterContext;

IdenParameterContext.prototype.iden = function() {
    return this.getTypedRuleContext(IdenContext,0);
};
IdenParameterContext.prototype.enterRule = function(listener) {
    if(listener instanceof GrammarListener ) {
        listener.enterIdenParameter(this);
	}
};

IdenParameterContext.prototype.exitRule = function(listener) {
    if(listener instanceof GrammarListener ) {
        listener.exitIdenParameter(this);
	}
};

IdenParameterContext.prototype.accept = function(visitor) {
    if ( visitor instanceof GrammarVisitor ) {
        return visitor.visitIdenParameter(this);
    } else {
        return visitor.visitChildren(this);
    }
};



GrammarParser.ParameterContext = ParameterContext;

GrammarParser.prototype.parameter = function() {

    var localctx = new ParameterContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, GrammarParser.RULE_parameter);
    try {
        this.state = 41;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case GrammarParser.WORD:
            localctx = new IdenParameterContext(this, localctx);
            this.enterOuterAlt(localctx, 1);
            this.state = 36;
            this.iden();
            break;
        case GrammarParser.T__0:
            localctx = new SpreadParameterContext(this, localctx);
            this.enterOuterAlt(localctx, 2);
            this.state = 37;
            this.match(GrammarParser.T__0);
            this.state = 38;
            this.iden();
            break;
        case GrammarParser.T__1:
            localctx = new PropertyParameterContext(this, localctx);
            this.enterOuterAlt(localctx, 3);
            this.state = 39;
            this.match(GrammarParser.T__1);
            this.state = 40;
            this.iden();
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ParametersContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = GrammarParser.RULE_parameters;
    return this;
}

ParametersContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ParametersContext.prototype.constructor = ParametersContext;

ParametersContext.prototype.parameter = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ParameterContext);
    } else {
        return this.getTypedRuleContext(ParameterContext,i);
    }
};

ParametersContext.prototype.enterRule = function(listener) {
    if(listener instanceof GrammarListener ) {
        listener.enterParameters(this);
	}
};

ParametersContext.prototype.exitRule = function(listener) {
    if(listener instanceof GrammarListener ) {
        listener.exitParameters(this);
	}
};

ParametersContext.prototype.accept = function(visitor) {
    if ( visitor instanceof GrammarVisitor ) {
        return visitor.visitParameters(this);
    } else {
        return visitor.visitChildren(this);
    }
};




GrammarParser.ParametersContext = ParametersContext;

GrammarParser.prototype.parameters = function() {

    var localctx = new ParametersContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, GrammarParser.RULE_parameters);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 43;
        this.match(GrammarParser.T__2);
        this.state = 49;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,1,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                this.state = 44;
                this.parameter();
                this.state = 45;
                this.match(GrammarParser.T__3); 
            }
            this.state = 51;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,1,this._ctx);
        }

        this.state = 53;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===GrammarParser.T__0 || _la===GrammarParser.T__1 || _la===GrammarParser.WORD) {
            this.state = 52;
            this.parameter();
        }

        this.state = 55;
        this.match(GrammarParser.T__4);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function FuncContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = GrammarParser.RULE_func;
    return this;
}

FuncContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
FuncContext.prototype.constructor = FuncContext;


 
FuncContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};


function TradFuncContext(parser, ctx) {
	FuncContext.call(this, parser);
    FuncContext.prototype.copyFrom.call(this, ctx);
    return this;
}

TradFuncContext.prototype = Object.create(FuncContext.prototype);
TradFuncContext.prototype.constructor = TradFuncContext;

GrammarParser.TradFuncContext = TradFuncContext;

TradFuncContext.prototype.parameters = function() {
    return this.getTypedRuleContext(ParametersContext,0);
};

TradFuncContext.prototype.statement = function() {
    return this.getTypedRuleContext(StatementContext,0);
};
TradFuncContext.prototype.enterRule = function(listener) {
    if(listener instanceof GrammarListener ) {
        listener.enterTradFunc(this);
	}
};

TradFuncContext.prototype.exitRule = function(listener) {
    if(listener instanceof GrammarListener ) {
        listener.exitTradFunc(this);
	}
};

TradFuncContext.prototype.accept = function(visitor) {
    if ( visitor instanceof GrammarVisitor ) {
        return visitor.visitTradFunc(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function ArrowFuncContext(parser, ctx) {
	FuncContext.call(this, parser);
    FuncContext.prototype.copyFrom.call(this, ctx);
    return this;
}

ArrowFuncContext.prototype = Object.create(FuncContext.prototype);
ArrowFuncContext.prototype.constructor = ArrowFuncContext;

GrammarParser.ArrowFuncContext = ArrowFuncContext;

ArrowFuncContext.prototype.statement = function() {
    return this.getTypedRuleContext(StatementContext,0);
};

ArrowFuncContext.prototype.parameters = function() {
    return this.getTypedRuleContext(ParametersContext,0);
};

ArrowFuncContext.prototype.parameter = function() {
    return this.getTypedRuleContext(ParameterContext,0);
};
ArrowFuncContext.prototype.enterRule = function(listener) {
    if(listener instanceof GrammarListener ) {
        listener.enterArrowFunc(this);
	}
};

ArrowFuncContext.prototype.exitRule = function(listener) {
    if(listener instanceof GrammarListener ) {
        listener.exitArrowFunc(this);
	}
};

ArrowFuncContext.prototype.accept = function(visitor) {
    if ( visitor instanceof GrammarVisitor ) {
        return visitor.visitArrowFunc(this);
    } else {
        return visitor.visitChildren(this);
    }
};



GrammarParser.FuncContext = FuncContext;

GrammarParser.prototype.func = function() {

    var localctx = new FuncContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, GrammarParser.RULE_func);
    try {
        this.state = 68;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case GrammarParser.T__5:
            localctx = new TradFuncContext(this, localctx);
            this.enterOuterAlt(localctx, 1);
            this.state = 57;
            this.match(GrammarParser.T__5);
            this.state = 58;
            this.parameters();
            this.state = 59;
            this.statement();
            break;
        case GrammarParser.T__0:
        case GrammarParser.T__1:
        case GrammarParser.T__2:
        case GrammarParser.WORD:
            localctx = new ArrowFuncContext(this, localctx);
            this.enterOuterAlt(localctx, 2);
            this.state = 63;
            this._errHandler.sync(this);
            switch(this._input.LA(1)) {
            case GrammarParser.T__2:
                this.state = 61;
                this.parameters();
                break;
            case GrammarParser.T__0:
            case GrammarParser.T__1:
            case GrammarParser.WORD:
                this.state = 62;
                this.parameter();
                break;
            default:
                throw new antlr4.error.NoViableAltException(this);
            }
            this.state = 65;
            this.match(GrammarParser.T__6);
            this.state = 66;
            this.statement();
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ForloopContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = GrammarParser.RULE_forloop;
    return this;
}

ForloopContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ForloopContext.prototype.constructor = ForloopContext;

ForloopContext.prototype.iter = function() {
    return this.getTypedRuleContext(IterContext,0);
};

ForloopContext.prototype.statement = function() {
    return this.getTypedRuleContext(StatementContext,0);
};

ForloopContext.prototype.enterRule = function(listener) {
    if(listener instanceof GrammarListener ) {
        listener.enterForloop(this);
	}
};

ForloopContext.prototype.exitRule = function(listener) {
    if(listener instanceof GrammarListener ) {
        listener.exitForloop(this);
	}
};

ForloopContext.prototype.accept = function(visitor) {
    if ( visitor instanceof GrammarVisitor ) {
        return visitor.visitForloop(this);
    } else {
        return visitor.visitChildren(this);
    }
};




GrammarParser.ForloopContext = ForloopContext;

GrammarParser.prototype.forloop = function() {

    var localctx = new ForloopContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, GrammarParser.RULE_forloop);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 70;
        this.match(GrammarParser.T__7);
        this.state = 71;
        this.match(GrammarParser.T__2);
        this.state = 72;
        this.iter();
        this.state = 73;
        this.match(GrammarParser.T__4);
        this.state = 74;
        this.statement();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function WhileloopContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = GrammarParser.RULE_whileloop;
    return this;
}

WhileloopContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
WhileloopContext.prototype.constructor = WhileloopContext;

WhileloopContext.prototype.value = function() {
    return this.getTypedRuleContext(ValueContext,0);
};

WhileloopContext.prototype.statement = function() {
    return this.getTypedRuleContext(StatementContext,0);
};

WhileloopContext.prototype.enterRule = function(listener) {
    if(listener instanceof GrammarListener ) {
        listener.enterWhileloop(this);
	}
};

WhileloopContext.prototype.exitRule = function(listener) {
    if(listener instanceof GrammarListener ) {
        listener.exitWhileloop(this);
	}
};

WhileloopContext.prototype.accept = function(visitor) {
    if ( visitor instanceof GrammarVisitor ) {
        return visitor.visitWhileloop(this);
    } else {
        return visitor.visitChildren(this);
    }
};




GrammarParser.WhileloopContext = WhileloopContext;

GrammarParser.prototype.whileloop = function() {

    var localctx = new WhileloopContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, GrammarParser.RULE_whileloop);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 76;
        this.match(GrammarParser.T__8);
        this.state = 77;
        this.match(GrammarParser.T__2);
        this.state = 78;
        this.value(0);
        this.state = 79;
        this.match(GrammarParser.T__4);
        this.state = 80;
        this.statement();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function IterContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = GrammarParser.RULE_iter;
    return this;
}

IterContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
IterContext.prototype.constructor = IterContext;


 
IterContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};


function InIterContext(parser, ctx) {
	IterContext.call(this, parser);
    IterContext.prototype.copyFrom.call(this, ctx);
    return this;
}

InIterContext.prototype = Object.create(IterContext.prototype);
InIterContext.prototype.constructor = InIterContext;

GrammarParser.InIterContext = InIterContext;

InIterContext.prototype.designator = function() {
    return this.getTypedRuleContext(DesignatorContext,0);
};

InIterContext.prototype.iden = function() {
    return this.getTypedRuleContext(IdenContext,0);
};

InIterContext.prototype.value = function() {
    return this.getTypedRuleContext(ValueContext,0);
};
InIterContext.prototype.enterRule = function(listener) {
    if(listener instanceof GrammarListener ) {
        listener.enterInIter(this);
	}
};

InIterContext.prototype.exitRule = function(listener) {
    if(listener instanceof GrammarListener ) {
        listener.exitInIter(this);
	}
};

InIterContext.prototype.accept = function(visitor) {
    if ( visitor instanceof GrammarVisitor ) {
        return visitor.visitInIter(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function OfIterContext(parser, ctx) {
	IterContext.call(this, parser);
    IterContext.prototype.copyFrom.call(this, ctx);
    return this;
}

OfIterContext.prototype = Object.create(IterContext.prototype);
OfIterContext.prototype.constructor = OfIterContext;

GrammarParser.OfIterContext = OfIterContext;

OfIterContext.prototype.designator = function() {
    return this.getTypedRuleContext(DesignatorContext,0);
};

OfIterContext.prototype.iden = function() {
    return this.getTypedRuleContext(IdenContext,0);
};

OfIterContext.prototype.value = function() {
    return this.getTypedRuleContext(ValueContext,0);
};
OfIterContext.prototype.enterRule = function(listener) {
    if(listener instanceof GrammarListener ) {
        listener.enterOfIter(this);
	}
};

OfIterContext.prototype.exitRule = function(listener) {
    if(listener instanceof GrammarListener ) {
        listener.exitOfIter(this);
	}
};

OfIterContext.prototype.accept = function(visitor) {
    if ( visitor instanceof GrammarVisitor ) {
        return visitor.visitOfIter(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function ThreeFuncIterContext(parser, ctx) {
	IterContext.call(this, parser);
    IterContext.prototype.copyFrom.call(this, ctx);
    return this;
}

ThreeFuncIterContext.prototype = Object.create(IterContext.prototype);
ThreeFuncIterContext.prototype.constructor = ThreeFuncIterContext;

GrammarParser.ThreeFuncIterContext = ThreeFuncIterContext;

ThreeFuncIterContext.prototype.statement = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(StatementContext);
    } else {
        return this.getTypedRuleContext(StatementContext,i);
    }
};

ThreeFuncIterContext.prototype.value = function() {
    return this.getTypedRuleContext(ValueContext,0);
};
ThreeFuncIterContext.prototype.enterRule = function(listener) {
    if(listener instanceof GrammarListener ) {
        listener.enterThreeFuncIter(this);
	}
};

ThreeFuncIterContext.prototype.exitRule = function(listener) {
    if(listener instanceof GrammarListener ) {
        listener.exitThreeFuncIter(this);
	}
};

ThreeFuncIterContext.prototype.accept = function(visitor) {
    if ( visitor instanceof GrammarVisitor ) {
        return visitor.visitThreeFuncIter(this);
    } else {
        return visitor.visitChildren(this);
    }
};



GrammarParser.IterContext = IterContext;

GrammarParser.prototype.iter = function() {

    var localctx = new IterContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, GrammarParser.RULE_iter);
    var _la = 0; // Token type
    try {
        this.state = 103;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,8,this._ctx);
        switch(la_) {
        case 1:
            localctx = new ThreeFuncIterContext(this, localctx);
            this.enterOuterAlt(localctx, 1);
            this.state = 83;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << GrammarParser.T__0) | (1 << GrammarParser.T__1) | (1 << GrammarParser.T__2) | (1 << GrammarParser.T__5) | (1 << GrammarParser.T__7) | (1 << GrammarParser.T__8) | (1 << GrammarParser.T__12) | (1 << GrammarParser.T__15) | (1 << GrammarParser.T__17) | (1 << GrammarParser.T__28) | (1 << GrammarParser.T__29) | (1 << GrammarParser.T__30))) !== 0) || ((((_la - 32)) & ~0x1f) == 0 && ((1 << (_la - 32)) & ((1 << (GrammarParser.T__31 - 32)) | (1 << (GrammarParser.T__32 - 32)) | (1 << (GrammarParser.T__33 - 32)) | (1 << (GrammarParser.T__45 - 32)) | (1 << (GrammarParser.T__50 - 32)) | (1 << (GrammarParser.T__52 - 32)) | (1 << (GrammarParser.TRUE - 32)) | (1 << (GrammarParser.FALSE - 32)) | (1 << (GrammarParser.COMMENT - 32)) | (1 << (GrammarParser.WORD - 32)) | (1 << (GrammarParser.STRING - 32)) | (1 << (GrammarParser.NUM - 32)))) !== 0)) {
                this.state = 82;
                this.statement();
            }

            this.state = 85;
            this.match(GrammarParser.T__9);
            this.state = 87;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << GrammarParser.T__0) | (1 << GrammarParser.T__1) | (1 << GrammarParser.T__2) | (1 << GrammarParser.T__5) | (1 << GrammarParser.T__15) | (1 << GrammarParser.T__17))) !== 0) || ((((_la - 33)) & ~0x1f) == 0 && ((1 << (_la - 33)) & ((1 << (GrammarParser.T__32 - 33)) | (1 << (GrammarParser.T__33 - 33)) | (1 << (GrammarParser.T__45 - 33)) | (1 << (GrammarParser.T__50 - 33)) | (1 << (GrammarParser.T__52 - 33)) | (1 << (GrammarParser.TRUE - 33)) | (1 << (GrammarParser.FALSE - 33)) | (1 << (GrammarParser.WORD - 33)) | (1 << (GrammarParser.STRING - 33)) | (1 << (GrammarParser.NUM - 33)))) !== 0)) {
                this.state = 86;
                this.value(0);
            }
